Adds view and controller files

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <body
 >
   <div id="pageWrap">
-    <div data-ng-include="'generic/nav.html'"></div>
+    <div data-ng-include="'nav.html'"></div>
     <div data-ui-view class="wrapper" id="main-view"></div>
     <footer><a
     analytics-on="click"
